--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = regenbogencode/ESPNowW@^1.0.2
+lib_deps = 
+	regenbogencode/ESPNowW@^1.0.2
+	adafruit/Adafruit SSD1306@^2.5.9
+	adafruit/Adafruit GFX Library@^1.11.9
